kubernetes/apps/production/flyimg/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flyimg
  namespace: public-services
spec:
  replicas: 1
  selector:
    matchLabels:
      app: flyimg
  template:
    metadata:
      labels:
        app: flyimg
    spec:
      containers:
        - name: flyimg-container
          image: flyimg/flyimg:1.4.14
          securityContext:
            allowPrivilegeEscalation: false
          ports:
            - containerPort: 80
          resources:
            requests:
              cpu: 50m
              memory: 100Mi
            limits:
              cpu: 1000m # 1 vCPU
              memory: 200Mi
          volumeMounts:
            - name: flyimg-storage
              mountPath: /var/www/html/web/uploads
      volumes:
        - name: flyimg-storage
          persistentVolumeClaim:
            claimName: flyimg-pvc
